--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "genkit:watch": "genkit start -- tsx src/ai/dev.ts",
     "build": "next build",
+    "postbuild": "cp public/background.js out/ && cp public/content.js out/ && cp public/manifest.json out/ && cp public/icon16.png out/ && cp public/icon48.png out/ && cp public/icon128.png out/",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
