--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Gemini Contextualizer",
   "version": "1.0",
   "description": "An AI assistant to help you with your text-based tasks.",
-  "permissions": ["contextMenus", "storage", "scripting", "activeTab"],
+  "permissions": ["contextMenus", "storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -23,13 +23,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": ["/index.html"],
-      "matches": ["<all_urls>"]
+      "js": ["content.js"],
+      "all_frames": true
     }
   ]
 }
