--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
     "genkit:start": "genkit start -- tsx src/ai/dev.ts",
-    "build": "next build",
-    "postbuild": "cp public/background.js out/ && cp public/content.js out/ && cp public/manifest.json out/ && cp public/icon16.png out/ && cp public/icon48.png out/ && cp public/icon128.png out/",
+    "build": "scripts\\build.bat",
+
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/firebase": "^1.16.1",
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/exporter-jaeger": "^2.0.1",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
